List-View & LSP bug fixing
LSP: Set item width to 11.1% as div class="inner" scales too wide

--- a/seton.css
+++ b/seton.css
@@ -1,7 +1,6 @@
 @font-face {font-family: 'ElegantIcons'; src: url('css/fonts/ElegantIcons.eot'); src: url('css/fonts/ElegantIcons.eot?#iefix') format('embedded-opentype'), url('css/fonts/ElegantIcons.woff') format('woff'), url('css/fonts/ElegantIcons.ttf') format('truetype'), url('css/fonts/ElegantIcons.svg#ElegantIcons') format('svg'); font-weight: normal; font-style: normal}
 .data-icon:before, .data-icon:after, .Filterparameter a:before, .Icon:before, .Bullet-Haekchen li:before, .Editieren:after, .royalSlider .arrow_carrot-left_alt2:before, .royalSlider .icon_pause_alt2:before, .royalSlider .arrow_triangle-right_alt2:before, .royalSlider .arrow_carrot-right_alt2:before, .Link-Liste a:before, .Vorteile li:before, .Info-Icon:before, .icon_chat_alt:before, .icon_phone:before, .controls label:before {font: normal normal normal 1em/1rem 'ElegantIcons'; speak: none; -webkit-font-smoothing: antialiased}
 
-
 /* Allgemeine Definitionen */
 body {font: normal normal 13px/1.25rem Arial, 'Helvetica Neue', Helvetica, sans-serif; color: #3e3e3e; padding: 0; margin: 0 auto; max-width: 1024px; -webkit-tap-highlight-color: rgba(0, 0, 0, 0)}
 img {max-width: 100%; border: 0}
@@ -973,7 +972,6 @@ a.Mehr-Filterparameter {display: none; position: absolute; bottom: 0; right: 0; 
 .Artikelsuche-Navi > span {margin: 0 1rem 0 0; }
 .Anzahl-Artikel:after {content: " Artikel"}
 .Seiten-blaettern span {font-weight: normal}
-.Listenansicht a {color: #3e3e3e}
 .Listenansicht :before {vertical-align: middle; display: inline-block;}
 .Listenansicht a:hover, .Listenansicht .active {color: #0061a0; text-decoration:none }
 .Listenansicht .Grid-View:before { content:"\e08c"; font-size: 1.75em;}
@@ -1037,7 +1035,7 @@ ul.list-view {/* margin:0 */}
 .list-view.products .col3.first .Sparen { position:absolute; top:0; left:0 }
 .list-view.products .col3.first figure { padding:0; margin:0; color:#8a8a8a }
 
-.list-view.products .col9 { overflow:hidden; display:block; margin: 1rem 0 0; font-size: 1rem;}
+.list-view.products .col9 { overflow:hidden; display:block; margin: 1rem 0 .5rem 0; font-size: 1rem;}
 .list-view.products [id*="Artikelnummer_"] { display:none }
 .list-view.products [id*="Dropdowns_"] { margin: 1.5em 0 0.5rem 0;}
 
@@ -1115,6 +1113,7 @@ ul.list-view {/* margin:0 */}
 .cc-slider.items-8 .item {width: 1.25%}
 .cc-slider.items-9 .item {width: 1.11%}
 .cc-slider.items-10 .item {width: 1%}
+#cc-slider-lsp .item {width: 11.1%}
 #cc-slider-lsp .item .Bild {height: 80px}
 .products.cc-slider .item .Bild {height: 115px}
 .products.cc-slider .item .Produkttitel {display: block}
@@ -1583,7 +1582,7 @@ a.Blog {width: 98px; background-position: -180px 0; margin: 0}
 .Footer .bewertung {margin: 0 0 0 10px}
 
 /* Footer Kundenmeinung */
-.Klein, .preisvorher, .Streich-Preis, .Artikelanzahl, .hreview-aggregate .rating, .Vorrat, .Fax span, .Hotline span, .Mail span a, .Anschrift span, .Info span a, .Online-Shop span a, .Warenkorb span a, .Disclaimer, .Bildunterschrift, .Upsell .tooltip .Upsellnein, .Designcode-Artikelauswahl .rsWithThumbsHor .rsGCaption figure {color: #8A8A8A}
+.Klein, .preisvorher, .Streich-Preis, .Artikelanzahl, .hreview-aggregate .rating, .Vorrat, .Fax span, .Hotline span, .Mail span a, .Anschrift span, .Info span a, .Online-Shop span a, .Warenkorb span a, .Disclaimer, .Bildunterschrift, .Upsell .tooltip .Upsellnein, .Designcode-Artikelauswahl .rsWithThumbsHor .rsGCaption figure, .Listenansicht a {color: #8A8A8A}
 .Checkout .NL-Layer, .Checkout-Adresseingabe .NL-Layer, .Checkout-Check-and-Send .NL-Layer {display: none !important}
 
 /* NL-Gewinnspiel */
